--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "molitor/user",
+    "name": "istvanmolitor/user",
     "description": "User",
     "type": "library",
     "license": "MIT",
