--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "istvanmolitor/admin": "dev-main"
+    },
     "autoload": {
         "psr-4": {
             "Molitor\\User\\": "src/"
